@@ -655,45 +655,6 @@ PHP_METHOD(DOMElement, getAttributeNS)
 }
 /* }}} end dom_element_get_attribute_ns */
 
-static xmlNsPtr _dom_new_reconNs(xmlDocPtr doc, xmlNodePtr tree, xmlNsPtr ns) /* {{{ */
-{
-	xmlNsPtr def;
-	xmlChar prefix[50];
-	int counter = 1;
-
-	if ((tree == NULL) || (ns == NULL) || (ns->type != XML_NAMESPACE_DECL)) {
-		return NULL;
-	}
-
-	/* Code taken from libxml2 (2.6.20) xmlNewReconciliedNs
-	 *
-	 * Find a close prefix which is not already in use.
-	 * Let's strip namespace prefixes longer than 20 chars !
-	 */
-	if (ns->prefix == NULL)
-		snprintf((char *) prefix, sizeof(prefix), "default");
-	else
-		snprintf((char *) prefix, sizeof(prefix), "%.20s", (char *)ns->prefix);
-
-	def = xmlSearchNs(doc, tree, prefix);
-	while (def != NULL) {
-		if (counter > 1000) return(NULL);
-		if (ns->prefix == NULL)
-			snprintf((char *) prefix, sizeof(prefix), "default%d", counter++);
-		else
-			snprintf((char *) prefix, sizeof(prefix), "%.20s%d",
-			(char *)ns->prefix, counter++);
-		def = xmlSearchNs(doc, tree, prefix);
-	}
-
-	/*
-	 * OK, now we are ready to create a new one.
-	 */
-	def = xmlNewNs(tree, ns->href, prefix);
-	return(def);
-}
-/* }}} */
-
 /* {{{ URL: http://www.w3.org/TR/2003/WD-DOM-Level-3-Core-20030226/DOM3-Core.html#core-ID-ElSetAttrNS
 Since: DOM Level 2
 */
@@ -756,27 +717,18 @@ PHP_METHOD(DOMElement, setAttributeNS)
 						tmpnsptr = tmpnsptr->next;
 					}
 					if (tmpnsptr == NULL) {
-						nsptr = _dom_new_reconNs(elemp->doc, elemp, nsptr);
+						nsptr = dom_get_ns_resolve_prefix_conflict(elemp, (const char *) nsptr->href);
 					}
 				}
 			}
 
 			if (nsptr == NULL) {
-				if (prefix == NULL) {
-					if (is_xmlns == 1) {
-						xmlNewNs(elemp, (xmlChar *)value, NULL);
-						xmlReconciliateNs(elemp->doc, elemp);
-					} else {
-						errorcode = NAMESPACE_ERR;
-					}
+				if (is_xmlns == 1) {
+					xmlNewNs(elemp, (xmlChar *)value, prefix == NULL ? NULL : (xmlChar *)localname);
 				} else {
-					if (is_xmlns == 1) {
-						xmlNewNs(elemp, (xmlChar *)value, (xmlChar *)localname);
-					} else {
-						nsptr = dom_get_ns(elemp, uri, &errorcode, prefix);
-					}
-					xmlReconciliateNs(elemp->doc, elemp);
+					nsptr = dom_get_ns(elemp, uri, &errorcode, prefix);
 				}
+				xmlReconciliateNs(elemp->doc, elemp);
 			} else {
 				if (is_xmlns == 1) {
 					if (nsptr->href) {
